[package]
name = "spin-factor-observe"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
indexmap = "2.2.6"
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
spin-core = { path = "../core" }
spin-factors = { path = "../factors" }
spin-resource-table = { path = "../table" }
spin-world = { path = "../world" }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }

[dev-dependencies]
toml = "0.5"

[lints]
workspace = true
