[package]
name = "spin-factor-outbound-networking"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = "1"
futures-util = "0.3"
http = "1.1.0"
ipnet = "2.9.0"
rustls = { workspace = true }
rustls-pemfile = { version = "2.1.2", optional = true }
rustls-pki-types = "1.7.0"
serde = { version = "1", features = ["derive"] }
spin-expressions = { path = "../expressions" }
spin-factor-variables = { path = "../factor-variables" }
spin-factor-wasi = { path = "../factor-wasi" }
spin-factors = { path = "../factors" }
spin-locked-app = { path = "../locked-app" }
spin-serde = { path = "../serde" }
terminal = { path = "../terminal" }
tracing = { workspace = true }
url = "2.4.1"
urlencoding = "2.1"
webpki-roots = "0.26"

[dev-dependencies]
spin-factors-test = { path = "../factors-test" }
tempfile = "3.10.1"
tokio = { version = "1", features = ["macros", "rt"] }
toml = "0.8"
wasmtime-wasi = { workspace = true }

[features]
default = ["spin-cli"]
# Includes the runtime configuration handling used by the Spin CLI
spin-cli = [
  "dep:rustls-pemfile",
]
[lints]
workspace = true
