[package]
name = "spin-factor-outbound-networking"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
futures-util = "0.3"
http = { workspace = true }
ipnet = "2"
rustls = { workspace = true }
rustls-pemfile = { version = "2", optional = true }
rustls-pki-types = "1.7.0"
serde = { workspace = true }
spin-expressions = { path = "../expressions" }
spin-factor-variables = { path = "../factor-variables" }
spin-factor-wasi = { path = "../factor-wasi" }
spin-factors = { path = "../factors" }
spin-locked-app = { path = "../locked-app" }
spin-manifest = { path = "../manifest" }
spin-serde = { path = "../serde" }
terminal = { path = "../terminal" }
tracing = { workspace = true }
url = { workspace = true }
urlencoding = "2.1"
webpki-roots = "0.26"

[dev-dependencies]
spin-factors-test = { path = "../factors-test" }
tempfile = { workspace = true }
tokio = { version = "1", features = ["macros", "rt"] }
toml = { workspace = true }
wasmtime-wasi = { workspace = true }

[features]
default = ["spin-cli"]
# Includes the runtime configuration handling used by the Spin CLI
spin-cli = [
  "dep:rustls-pemfile",
]
[lints]
workspace = true
