[package]
name = "spin-factor-outbound-redis"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = "1.0"
redis = { version = "0.21", features = ["tokio-comp", "tokio-native-tls-comp", "aio"] }
spin-core = { path = "../core" }
spin-factor-outbound-networking = { path = "../factor-outbound-networking" }
spin-factors = { path = "../factors" }
spin-world = { path = "../world" }
table = { path = "../table" }
tracing = { workspace = true }


[dev-dependencies]
spin-factor-variables = { path = "../factor-variables" }
spin-factors-test = { path = "../factors-test" }
tokio = { version = "1", features = ["macros", "rt"] }

# wasmtime-wasi-http = { workspace = true }
[lints]
workspace = true
